# src/app/services/models/skill.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Skill {
+  name?: string;
+  percentage?: number;
+}
